2012-07-25  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* conf/YarpFindDependencies.cmake: Move checks for dependencies
	  in this file.

	* README.txt: Remove references to autotools in documentation.

	* CMakeLists.txt, etc: Fixes, cleanup, etc.

	* example/matrix/CMakeLists.txt, example/matrix/basic_ops.cpp,
	  example/motorcontrol/CMakeLists.txt,
	  example/nvidia/progs/FP-resize.cg,
	  example/nvidia/progs/motion.cg, example/os/ratethread.cpp,
	  example/portaudio/CMakeLists.txt,
	  example/portaudio/sound_loopback.cpp,
	  example/portaudio/sound_receiver.cpp,
	  example/portaudio/sound_sender.cpp,
	  example/rand/CMakeLists.txt, example/rand/rand.cpp,
	  example/stressTests/scripts/grind,
	  example/stressTests/scripts/hammer,
	  example/stressTests/scripts/hammer-yarp-server,
	  example/swig/src/Example3.java: fix permissions.

2012-07-25  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* src/yarpscope/src/DataPlot.cpp, src/yarpscope/src/DataPlot.h,
	  src/yarpscope/src/PlotManager.cpp,
	  src/yarpscope/src/PlotManager.h,
	  src/yarpscope/src/XmlLoader.cpp: Read minval and maxval as
          float in yarpscope.

2012-07-24  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/modules/kinect/OpenNI/KinectYarpDeviceServerLib: apply 
	patch for "no mirror" option [thanks Juan G Victores]

2012-07-23  Daniele E. Domenichelli <daniele.domenichelli@iit.it>

	* automake.am, configure.ac: Remove autotools buildsystem no longer
	  supported.

2012-07-20  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/ResourceFinder.cpp: add /usr/local/etc
	to default search path, for convenience of OSX users 
	[thanks Francesco Nori] [thanks Lorenzo Natale]

	* src/tests/CMakeLists.txt, src/yarpview/CMakeLists.txt,
	src/yarpview/yarpview.cpp, ...: from Anne van Rossum, some more
	fixes for YARP without ACE [thanks Anne van Rossum]

	* extern/sqlite: move sqlite amalgamation to more standard